improved windows linux compability